# agent_0

./: .gitignore  README.md  pyproject.toml
src/agents/: X.py  agent_application.py  graph.py  helper_graph.py  load_mcp.py  logger_config.py  memory.py  ollama_helper.py
src/agents/old/: agent_1.py  mcp_json.json
src/agents/tools/: get_all_mcp.py
src/agents/tools/Apply/: fake_db.py  mcp_update_all.py.bak  mcp_update_application.py
src/agents/tools/Calculate/: mcp_add.py  mcp_mul.py
