[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.4",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.3",
]

[project.scripts]
agents = "agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]

# reportMissingImports = "error"
# reportMissingTypeStubs = false

reportUnknownMemberType =false

reportUnusedCallResult = "hint"
